# XFilesRootHelper

./: .cirrus.yml  .gitignore  .travis.yml  BUILDING_UNIVERSAL_LINUX.md  README.md  appIcon.rc  appveyor.yml  build.bat  build.sh  genBotanAmalgamations.bat  genBotanAmalgamations.sh  genRootHelperDesktop.bat  genRootHelperDesktop.sh  genRootHelperDesktopFull.bat  genRootHelperDesktopFull.sh  genRootHelpersAndroid.bat  genRootHelpersAndroid.sh  genRootHelpersAndroid_travis.sh
ANDROID/7z/jni/: Android.mk  Application.mk
ANDROID/7za/jni/: Android.mk
ANDROID/7zr/jni/: Android.mk
ANDROID/Format7zFree/jni/: Android.mk  Application.mk
ANDROID/RootHelper/jni/: Android.mk  Application.mk
C/: 7zTypes.h
CMAKE/: CMakeLists.txt
CMAKE/7z_/: CMakeLists.txt
CMAKE/7za/: CMakeLists.txt
CMAKE/7zr/: CMakeLists.txt
CMAKE/Format7zFree/: CMakeLists.txt
CMAKE/RootHelper/: CMakeLists.txt
CMAKE_ios/: CMakeLists.txt  README.MD
CMAKE_ios/7zFM/: CMakeLists.txt
CMAKE_ios/7zG/: CMakeLists.txt
CMAKE_ios/7z_/: CMakeLists.txt
CMAKE_ios/7za/: CMakeLists.txt
CMAKE_ios/7zr/: CMakeLists.txt
CMAKE_ios/Format7zFree/: CMakeLists.txt
CMAKE_ios/RootHelper/: CMakeLists.txt
CPP/7zip/Archive/: ArHandler.cpp  ArjHandler.cpp  Bz2Handler.cpp  ComHandler.cpp  CpioHandler.cpp  CramfsHandler.cpp  DmgHandler.cpp  ElfHandler.cpp  ExtHandler.cpp  FatHandler.cpp  FlvHandler.cpp  GzHandler.cpp  HfsHandler.cpp  IhexHandler.cpp  LzhHandler.cpp  LzmaHandler.cpp  MachoHandler.cpp  MslzHandler.cpp  NtfsHandler.cpp  PeHandler.cpp  PpmdHandler.cpp  SplitHandler.cpp  SquashfsHandler.cpp  SwfHandler.cpp  UefiHandler.cpp  XarHandler.cpp  XzHandler.cpp  ZHandler.cpp
CPP/7zip/Archive/7z/: 7zHandler.h
CPP/7zip/Archive/Cab/: CabHandler.h
CPP/7zip/Archive/Chm/: ChmHandler.h
CPP/7zip/Archive/Iso/: IsoHandler.h
CPP/7zip/Archive/Nsis/: NsisHandler.h
CPP/7zip/Archive/Rar/: Rar5Handler.h  RarHandler.h
CPP/7zip/Archive/Tar/: TarHandler.h
CPP/7zip/Archive/Udf/: UdfHandler.h
CPP/7zip/Archive/Wim/: WimHandler.h
CPP/7zip/Archive/Zip/: ZipHandler.h
CPP/7zip/Common/: FileStreams.h
CPP/7zip/Crypto/: 7zAes.cpp  7zAes.h
CPP/7zip/UI/Common/: OpenArchive.cpp
CPP/Common/: MyCom.h  StringConvert.cpp  StringConvert.h
CPP/Windows/: DLL.cpp  FileDir.cpp  FileIO.cpp
RootHelper/: FileCopier.h  FileCopierConstants.h  GenericFileCopier.h  ReliableRingBuffer.h  ReliableRingBuffer.lockfree.h  Spmc_queue_lockfree.hpp  UdsFdIterable.h  Utils.h  af_unix_utils.h  archiveOps.h  archiveTypeDetector.h  archiveUtils.h  args_switch.h  cli.h  common_uds.h  common_win.h  console_utils.h  cpuquery.h  homePaths.h  iowrappers_common.h  path_utils.h  progressHook.h  r.cpp  rh_hasher_botan.h  unifiedlogging.h  version.h  xre.h  xrewin.cpp
RootHelper/androidjni/: wrapper.h
RootHelper/cli/: cli_parser.h
RootHelper/desc/: AutoFlushBufferedWriteDescriptor.h  BufferedWriteDescriptor.h  CFileDescriptor.h  FileDescriptorFactory.h  IDescriptor.h  NetworkDescriptorFactory.h  PosixDescriptor.h  SinkDescriptor.h  SstreamDescriptor.h  WinfileDescriptor.h  WinsockDescriptor.h
RootHelper/diriterator/: IdirIterator.h  cppstdfsIterator.h  readdirIterator.h  windiriterator.h
RootHelper/gui/: hashview.h  mfchashview.h  x11hashview.h
RootHelper/reqs/: compress_rq_options.h
RootHelper/resps/: conflict_resp.hpp  find_resp.hpp  folderStats_resp.h  ls_resp.hpp  singleStats_resp.h
RootHelper/tls/: basic_https_client.h  botan_credentials.h  botan_rh_rclient.h  botan_rh_rserver.h  botan_rh_tls_desc1.h  botan_rh_tls_descriptor.h  https_requests.h  ssh_keygen_ed25519.h  tiny_ssh_keygen_ed25519.h
RootHelper/xreannounce/: announcer.h  announcer_unix.h  announcer_windows.h  ifaddrs-android.h
botanAm/android/arm/: botan_all.cpp  botan_all.h  botan_all_internal.h
botanAm/android/arm64/: botan_all.cpp  botan_all.h  botan_all_internal.h
botanAm/android/x86/: botan_all.cpp  botan_all.h  botan_all_internal.h
botanAm/android/x86_64/: botan_all.cpp  botan_all.h  botan_all_internal.h
botanAm/desktop/bsd/x86_64/: botan_all.cpp  botan_all.h  botan_all_internal.h
botanAm/desktop/linux/x86_64/: botan_all.cpp  botan_all.h  botan_all_internal.h
botanAm/desktop/mac/x86_64/: botan_all.cpp  botan_all.h
botanAm/desktop/windows/x64_msvc/: botan_all.cpp  botan_all.h  botan_all_internal.h
botanAm/desktop/windows/x86_64/: botan_all.cpp  botan_all.h  botan_all_internal.h
botanAm/ios/arm/: botan_all.cpp  botan_all.h  botan_all_internal.h
botanAm/ios/arm64/: botan_all.cpp  botan_all.h  botan_all_internal.h
